--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -98,8 +98,8 @@
    "source": [
     "first_name = 'Diogo'\n",
     "last_name = 'Dantas'\n",
-    "full_name = '{} {}'.format(first_name,last_name)\n",
-    "#If you’re using Python 3.5 or earlier, you’ll need to use the format() method rather than of f syntax.\n",
+    "full_name = '{} {}'.format(first_name, last_name)\n",
+    "# If you’re using Python 3.5 or earlier, you’ll need to use the format() method rather than of f syntax.\n",
     "print(full_name)"
    ]
   },
@@ -185,8 +185,8 @@
    "source": [
     "name = input('Please, say your name: ')\n",
     "message = f'Hello {name.title()}, would you like to learn some Python today?'\n",
-    "dialogue =f'{name.upper()} says:\\n\\t \"Of course! Learning Python makes many activities easier!\"    '\n",
-    "print(message,'\\n',dialogue.strip())"
+    "dialogue = f'{name.upper()} says:\\n\\t \"Of course! Learning Python makes many activities easier!\"    '\n",
+    "print(message, '\\n', dialogue.strip())"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "MAX_CONNECTIONS = 5400\n",
-    "#Python programmers use all capital letters to indicate a variable should be treated as a constant and never be changed."
+    "# Python programmers use all capital letters to indicate a variable should be treated as a constant and never be changed."
    ]
   },
   {
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "print(sample_list,type(sample_list))"
+    "print(sample_list, type(sample_list))"
    ]
   },
   {
@@ -390,10 +390,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:02:47.275206Z",
+     "start_time": "2021-07-10T10:02:47.267237Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list = []\n",
+    "count = 0\n",
+    "\n",
+    "while count < 10:\n",
+    "    empty_list.append(count)\n",
+    "    count = count + 1\n",
+    "\n",
+    "print(empty_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:02:51.234876Z",
+     "start_time": "2021-07-10T10:02:51.229430Z"
+    },
+    "hide_input": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del empty_list[::-2]\n",
+    "print(empty_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:02:53.927843Z",
+     "start_time": "2021-07-10T10:02:53.909080Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero_element = empty_list.pop(0)\n",
+    "print(zero_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:03:05.607803Z",
+     "start_time": "2021-07-10T10:03:05.587417Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list.remove(2)  # remove() method delete list item by value.\n",
+    "print(empty_list)\n",
+    "# The remove() method deletes only the first occurrence of the value you specify.\n",
+    "# If there’s a possibility the value appears more than once in the list,\n",
+    "# you’ll need to use a loop to make sure all occurrences of the value are removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:27:34.237420Z",
+     "start_time": "2021-07-10T10:27:34.198884Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[43, 34, 31, 42, 4, 21, 43, 26, 27, 13, 15, 13]\n",
+      "[16, 46, 44, 6, 13, 29, 50, 40, 36, 10, 39, 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import choices, sample\n",
+    "\n",
+    "size = 12\n",
+    "values = range(1, 51)\n",
+    "\n",
+    "random_list = sample(values, size)\n",
+    "\n",
+    "print(choices(values, k=size))\n",
+    "print(random_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:29:18.896791Z",
+     "start_time": "2021-07-10T10:29:18.878920Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 10, 13, 16, 29, 36, 39, 40, 44, 46, 48, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_list.sort()\n",
+    "print(random_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:30:04.108149Z",
+     "start_time": "2021-07-10T10:30:04.104154Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 48, 46, 44, 40, 39, 36, 29, 16, 13, 10, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_list.sort(reverse=True)\n",
+    "print(random_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:33:15.622488Z",
+     "start_time": "2021-07-10T10:33:15.618217Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 10, 13, 16, 29, 36, 39, 40, 44, 46, 48, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_list.reverse()\n",
+    "print(random_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T10:33:39.431257Z",
+     "start_time": "2021-07-10T10:33:39.407809Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(random_list)"
+   ]
   }
  ],
  "metadata": {
@@ -401,6 +621,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -442,7 +674,7 @@
    },
    "position": {
     "height": "144px",
-    "left": "944px",
+    "left": "946px",
     "right": "20px",
     "top": "119px",
     "width": "350px"
