--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -592,11 +592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-10T10:33:39.431257Z",
-     "start_time": "2021-07-10T10:33:39.407809Z"
+     "end_time": "2021-07-10T15:34:52.274343Z",
+     "start_time": "2021-07-10T15:34:52.267606Z"
     }
    },
    "outputs": [
@@ -606,13 +606,191 @@
        "12"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(random_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T15:36:16.353062Z",
+     "start_time": "2021-07-10T15:36:16.340463Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for values in range(1, 5, 2):  # range(start, stop, step)\n",
+    "    print(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T15:36:40.036838Z",
+     "start_time": "2021-07-10T15:36:40.033365Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for values in range(1, 5):  # range(start, stop)\n",
+    "    print(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-10T15:38:10.238041Z",
+     "start_time": "2021-07-10T15:38:10.217712Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for values in range(5):  # range(start, stop)\n",
+    "    print(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T00:15:22.583108Z",
+     "start_time": "2021-07-13T00:15:22.558961Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n",
+      "[1, 3, 5, 7, 9, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_list = []\n",
+    "odd_list = []\n",
+    "for values in range(0, 11, 2):\n",
+    "    even_list.append(values)\n",
+    "\n",
+    "for values in range(1, 12, 2):\n",
+    "    odd_list.append(values)\n",
+    "\n",
+    "print(even_list)\n",
+    "print(odd_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T00:18:13.628363Z",
+     "start_time": "2021-07-13T00:18:13.615476Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_list = [values for values in range(0, 11, 2)]  # list comprehension\n",
+    "print(even_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T00:18:54.140032Z",
+     "start_time": "2021-07-13T00:18:54.120774Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_list = [values + 1 for values in range(0, 11, 2)]  # list comprehension\n",
+    "print(odd_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T00:21:44.921825Z",
+     "start_time": "2021-07-13T00:21:44.907079Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "twenty = [values for values in range(0, 21)]\n",
+    "print(twenty)"
    ]
   }
  ],
