Reading and practicing books 'Intensive Python Course' - page 87.

--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -772,11 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-13T00:21:44.921825Z",
-     "start_time": "2021-07-13T00:21:44.907079Z"
+     "end_time": "2021-07-13T12:33:48.373442Z",
+     "start_time": "2021-07-13T12:33:48.368789Z"
     }
    },
    "outputs": [
@@ -791,6 +791,509 @@
    "source": [
     "twenty = [values for values in range(0, 21)]\n",
     "print(twenty)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T12:34:02.107535Z",
+     "start_time": "2021-07-13T12:34:02.093337Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T12:34:45.240993Z",
+     "start_time": "2021-07-13T12:34:45.222950Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 18, 16, 14, 12, 10, 8, 6, 4, 2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty[-1::-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T12:37:01.337487Z",
+     "start_time": "2021-07-13T12:37:01.320772Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T12:39:31.509678Z",
+     "start_time": "2021-07-13T12:39:31.505017Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T12:39:59.397114Z",
+     "start_time": "2021-07-13T12:39:59.393825Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty[3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T13:31:04.334437Z",
+     "start_time": "2021-07-13T13:31:04.313832Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " My favourites fruits are ['apple', 'grape', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon']\n",
+    "\n",
+    "fav_fruits = [my_fav for my_fav in fruits[:3]]\n",
+    "\n",
+    "print(f' My favourites fruits are {fav_fruits}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T13:32:19.812259Z",
+     "start_time": "2021-07-13T13:32:19.793705Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favourites fruits are: \n",
+      "Apple\n",
+      "Grape\n",
+      "Banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon']\n",
+    "print('My favourites fruits are: ')\n",
+    "\n",
+    "fav_fruits = [print(my_fav.title()) for my_fav in fruits[:3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T13:46:24.121762Z",
+     "start_time": "2021-07-13T13:46:24.101007Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon', 'lemon'] ['apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon', 'lemon']\n",
+      "['apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon', 'lemon', 'lemon'] ['pineapple', 'apple', 'grape', 'banana', 'strawberry', 'kiwi', 'watermelon', 'lemon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copy the entire list\n",
+    "copy_fruits = fruits[:]\n",
+    "print(fruits, copy_fruits)\n",
+    "\n",
+    "fruits == copy_fruits\n",
+    "\n",
+    "# proving that the lists are separate (!= fruits = copy_fruits)\n",
+    "fruits.append('lemon')\n",
+    "copy_fruits.insert(0, 'pineapple')\n",
+    "\n",
+    "print(fruits, copy_fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T13:55:01.772063Z",
+     "start_time": "2021-07-13T13:55:01.757479Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "dimensions = (200, 50)\n",
+    "print(dimensions[0])\n",
+    "print(dimensions[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T13:58:36.027258Z",
+     "start_time": "2021-07-13T13:58:36.024336Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If you want to define a tuple with one element, you need to include a trailing comma.\n",
+    "# It doesn’t often make sense to build a tuple with one element,\n",
+    "# but this can happen when tuples are generated automatically.\n",
+    "\n",
+    "t_ = (1,)\n",
+    "print(type(t_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T14:03:18.527942Z",
+     "start_time": "2021-07-13T14:03:18.515609Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dimension in dimensions:\n",
+    "    print(dimension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T16:56:38.495394Z",
+     "start_time": "2021-07-13T16:56:38.477175Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'grape' in fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T17:15:29.500455Z",
+     "start_time": "2021-07-13T17:15:24.959221Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please type your name: Diogo\n",
+      "Congrats Diogo, user registered!\n",
+      "The system has 5 users.\n"
+     ]
+    }
+   ],
+   "source": [
+    "users = [\"Mike\", \"Jansen\", 'Davide', 'Karl']\n",
+    "test = input('Please type your name: ')\n",
+    "\n",
+    "if test.title() in users:\n",
+    "    print('You are already registered!')\n",
+    "else:\n",
+    "    users.append(test.title())\n",
+    "    print(f'Congrats {test}, user registered!')\n",
+    "        \n",
+    "print(f'The system has {len(users)} users.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T17:15:33.537333Z",
+     "start_time": "2021-07-13T17:15:33.530432Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mike', 'Jansen', 'Davide', 'Karl', 'Diogo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T17:16:01.335106Z",
+     "start_time": "2021-07-13T17:15:55.520415Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please type your name: jansen\n",
+      "You are already registered!\n",
+      "The system has 4 users.\n"
+     ]
+    }
+   ],
+   "source": [
+    "users = [\"Mike\", \"Jansen\", 'Davide', 'Karl']\n",
+    "test = input('Please type your name: ')\n",
+    "\n",
+    "if test.title() in users:\n",
+    "    print('You are already registered!')\n",
+    "else:\n",
+    "    users.append(test.title())\n",
+    "    print(f'Congrats {test}, user registered!')\n",
+    "        \n",
+    "print(f'The system has {len(users)} users.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-13T21:11:49.280628Z",
+     "start_time": "2021-07-13T21:11:47.106144Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On a scale of 0 to 10, how much have you studied Python? 10\n",
+      "Congrats! Your're the best!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scale = input('On a scale of 0 to 10, how much have you studied Python? ')\n",
+    "if float(scale) <= 5:\n",
+    "    print('Need to practice more, buddy!')\n",
+    "elif float(scale) <= 9:\n",
+    "    print('Good job!')\n",
+    "elif float(scale) == 10:\n",
+    "    print(\"Congrats! Your're the best!\")\n",
+    "else:\n",
+    "    print(\"The scale goes up to 10, take it easy on the study!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-14T13:35:55.707550Z",
+     "start_time": "2021-07-14T13:35:51.661702Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you? 15\n",
+      " You can drive every day.\n",
+      "Oh! You can't drive yet, but..\n",
+      " You can swim every day.\n",
+      " You can run every day.\n",
+      " You can read every day.\n",
+      " You can sleep every day.\n",
+      "\n",
+      " You do a lot of things, man!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasks = ['drive', 'swim', 'run', 'read', 'sleep']\n",
+    "age = input('How old are you? ')\n",
+    "\n",
+    "for task in tasks:\n",
+    "    if float(age) >= 18:\n",
+    "        print(f' You can {task} every day.')\n",
+    "    else:\n",
+    "        print(f' You can {task} every day.')\n",
+    "        if task == 'drive':\n",
+    "            print(\"Oh! You can't drive yet, but..\")\n",
+    "\n",
+    "            \n",
+    "print(\"\\n You do a lot of things, man!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-14T13:55:57.427222Z",
+     "start_time": "2021-07-14T13:55:52.116398Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you? 16\n",
+      "Oh! You can't drive yet, but..\n",
+      " You can swim every day.\n",
+      " You can run every day.\n",
+      " You can read every day.\n",
+      " You can sleep every day.\n",
+      "\n",
+      " You do a lot of things, man!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasks = ['drive', 'swim', 'run', 'read', 'sleep']\n",
+    "age = input('How old are you? ')\n",
+    "\n",
+    "for task in tasks:\n",
+    "    if float(age) >= 18:\n",
+    "        print(f' You can {task} every day.')\n",
+    "    else:\n",
+    "        if task == 'drive':\n",
+    "            print(\"Oh! You can't drive yet, but..\")\n",
+    "            filtered = filter(lambda tk: tk != 'drive', tasks)\n",
+    "            for item in filtered:\n",
+    "                print(f' You can {item} every day.')\n",
+    "\n",
+    "\n",
+    "print(\"\\n You do a lot of things, man!\")"
    ]
   }
  ],
