Reading and practicing books 'Intensive Python Course' - page 91.

--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -1181,11 +1181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 222,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-13T21:11:49.280628Z",
-     "start_time": "2021-07-13T21:11:47.106144Z"
+     "end_time": "2021-07-14T14:14:27.887755Z",
+     "start_time": "2021-07-14T14:14:24.854661Z"
     }
    },
    "outputs": [
@@ -1194,7 +1194,7 @@
      "output_type": "stream",
      "text": [
       "On a scale of 0 to 10, how much have you studied Python? 10\n",
-      "Congrats! Your're the best!\n"
+      "Congrats! You're the best!\n"
      ]
     }
    ],
@@ -1205,18 +1205,18 @@
     "elif float(scale) <= 9:\n",
     "    print('Good job!')\n",
     "elif float(scale) == 10:\n",
-    "    print(\"Congrats! Your're the best!\")\n",
+    "    print(\"Congrats! You're the best!\")\n",
     "else:\n",
     "    print(\"The scale goes up to 10, take it easy on the study!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 224,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T13:35:55.707550Z",
-     "start_time": "2021-07-14T13:35:51.661702Z"
+     "end_time": "2021-07-14T14:14:51.573985Z",
+     "start_time": "2021-07-14T14:14:48.174665Z"
     }
    },
    "outputs": [
@@ -1224,9 +1224,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How old are you? 15\n",
+      "How old are you? 33\n",
       " You can drive every day.\n",
-      "Oh! You can't drive yet, but..\n",
       " You can swim every day.\n",
       " You can run every day.\n",
       " You can read every day.\n",
@@ -1254,11 +1253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 255,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T13:55:57.427222Z",
-     "start_time": "2021-07-14T13:55:52.116398Z"
+     "end_time": "2021-07-14T14:43:59.401857Z",
+     "start_time": "2021-07-14T14:43:54.352982Z"
     },
     "scrolled": true
    },
@@ -1267,8 +1266,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How old are you? 16\n",
-      "Oh! You can't drive yet, but..\n",
+      "How old are you? 25\n",
+      " You can drive every day.\n",
       " You can swim every day.\n",
       " You can run every day.\n",
       " You can read every day.\n",
@@ -1293,6 +1292,65 @@
     "                print(f' You can {item} every day.')\n",
     "\n",
     "\n",
+    "print(\"\\n You do a lot of things, man!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-14T14:45:59.641747Z",
+     "start_time": "2021-07-14T14:45:53.924915Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What activity would you like to practice? walk\n",
+      "How old are you? 16\n",
+      " You can't walk, sorry guy.\n",
+      "Oh! You can't drive yet, but..\n",
+      " You can swim every day.\n",
+      " You can run every day.\n",
+      " You can read every day.\n",
+      " You can sleep every day.\n",
+      "\n",
+      " You do a lot of things, man!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasks = ['drive', 'swim', 'run', 'read', 'sleep']\n",
+    "request = str(input('What activity would you like to practice? '))\n",
+    "age = input('How old are you? ')\n",
+    "\n",
+    "\n",
+    "if request.lower() in tasks:\n",
+    "    for task in tasks:\n",
+    "        if float(age) >= 18:\n",
+    "            print(f' You can {task} every day.')\n",
+    "        else:\n",
+    "            if task == 'drive':\n",
+    "                print(\"Oh! You can't drive yet, but..\")\n",
+    "                filtered = filter(lambda tk: tk != 'drive', tasks)\n",
+    "                for item in filtered:\n",
+    "                    print(f' You can {item} every day.')\n",
+    "\n",
+    "else:\n",
+    "    print(f\" You can't {request}, sorry guy.\")\n",
+    "    for task in tasks:\n",
+    "        if float(age) >= 18:\n",
+    "            print(f' You can {task} every day.')\n",
+    "        else:\n",
+    "            if task == 'drive':\n",
+    "                print(\"Oh! You can't drive yet, but..\")\n",
+    "                filtered = filter(lambda tk: tk != 'drive', tasks)\n",
+    "                for item in filtered:\n",
+    "                    print(f' You can {item} every day.')\n",
+    "                          \n",
     "print(\"\\n You do a lot of things, man!\")"
    ]
   }
