Study and practice from the book to page 106.

--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -1353,6 +1353,501 @@
     "                          \n",
     "print(\"\\n You do a lot of things, man!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T01:36:33.499212Z",
+     "start_time": "2021-07-23T01:36:33.489421Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "languages = {\n",
+    "    'Python': 'Standard',\n",
+    "    'C#': 'Optional',\n",
+    "    'R': 'Statical Analysis'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T01:37:06.187931Z",
+     "start_time": "2021-07-23T01:37:06.174272Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, unregistered language.\n"
+     ]
+    }
+   ],
+   "source": [
+    "has_ruby = languages.get('ruby', 'Sorry, unregistered language.')\n",
+    "# searches for keys in the dictionary and presents personalized info if not found.\n",
+    "\n",
+    "print(has_ruby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-23T01:53:58.479744Z",
+     "start_time": "2021-07-23T01:53:58.466927Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(languages['Python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T16:36:01.052463Z",
+     "start_time": "2021-07-24T16:36:01.049701Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "my_friends = {\n",
+    "    'Work': 'Alan',\n",
+    "    'School': 'David',\n",
+    "    'Band': 'Beto',\n",
+    "    'Soccer': 'Neymar'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T16:38:56.274484Z",
+     "start_time": "2021-07-24T16:38:56.261461Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I know my friend Alan, from Work.\n",
+      "I know my friend David, from School.\n",
+      "I know my friend Beto, from Band.\n",
+      "I know my friend Neymar, from Soccer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in my_friends.items():  # great hint!\n",
+    "    print(f'I know my friend {value}, from {key}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T16:51:18.188847Z",
+     "start_time": "2021-07-24T16:51:18.175328Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I knew my friends from work.\n",
+      "I knew my friends from school.\n",
+      "I knew my friends from band.\n",
+      "I knew my friends from soccer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for site in my_friends.keys():  # note that the method is in the plural, KEYS.\n",
+    "    print(f'I knew my friends from {site.lower()}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T16:55:00.513532Z",
+     "start_time": "2021-07-24T16:55:00.501845Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I knew my friends from work.\n",
+      "I knew my friends from school.\n",
+      "I knew my friends from band.\n",
+      "I knew my friends from soccer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for site in my_friends:\n",
+    "    print(f'I knew my friends from {site.lower()}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:06:29.008844Z",
+     "start_time": "2021-07-24T17:06:29.001594Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I see Alan every day at work.\n",
+      "I see David every day at school.\n",
+      "Beto only see in the band.\n",
+      "Neymar only see in the soccer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "frequency = ['work', 'school']\n",
+    "\n",
+    "for k, v in my_friends.items():\n",
+    "    if k.lower() in frequency:\n",
+    "        print(f'I see {v.title()} every day at {k.lower()}.')\n",
+    "    else:\n",
+    "        print(f'{v.title()} only see in the {k.lower()}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:13:31.987033Z",
+     "start_time": "2021-07-24T17:13:31.983448Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't have friends who play tennis.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'Tennis' in my_friends:\n",
+    "    print('I have friends who play tennis!')\n",
+    "else:\n",
+    "    print(\"I don't have friends who play tennis.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:17:21.234132Z",
+     "start_time": "2021-07-24T17:17:21.212774Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have friends who play tennis!\n",
+      "\n",
+      "Key: WORK\n",
+      "\n",
+      "Value: Alan\n",
+      "\n",
+      "Key: SCHOOL\n",
+      "\n",
+      "Value: David\n",
+      "\n",
+      "Key: BAND\n",
+      "\n",
+      "Value: Beto\n",
+      "\n",
+      "Key: SOCCER\n",
+      "\n",
+      "Value: Neymar\n",
+      "\n",
+      "Key: TENNIS\n",
+      "\n",
+      "Value: Rogerio\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_friends['Tennis'] = 'Rogerio'\n",
+    "\n",
+    "if 'Tennis' in my_friends.keys():\n",
+    "    print('I have friends who play tennis!')\n",
+    "else:\n",
+    "    print(\"I don't have friends who play tennis.\")\n",
+    "\n",
+    "for k, v in my_friends.items():\n",
+    "    print(f'\\nKey: {k.upper()}')\n",
+    "    print(f'\\nValue: {v.title()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:20:07.952402Z",
+     "start_time": "2021-07-24T17:20:07.934897Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Key: BAND\n",
+      "\n",
+      "Value: Beto\n",
+      "\n",
+      "Key: SCHOOL\n",
+      "\n",
+      "Value: David\n",
+      "\n",
+      "Key: SOCCER\n",
+      "\n",
+      "Value: Neymar\n",
+      "\n",
+      "Key: TENNIS\n",
+      "\n",
+      "Value: Rogerio\n",
+      "\n",
+      "Key: WORK\n",
+      "\n",
+      "Value: Alan\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in sorted(my_friends.items()): # alphabetical order\n",
+    "    print(f'\\nKey: {k.upper()}')\n",
+    "    print(f'\\nValue: {v.title()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:25:32.184927Z",
+     "start_time": "2021-07-24T17:25:32.179380Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " This is my friend Alan.\n",
+      " This is my friend David.\n",
+      " This is my friend Beto.\n",
+      " This is my friend Neymar.\n",
+      " This is my friend Rogerio.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in my_friends.values():  # note that the method is in the plural, VALUES.\n",
+    "    print(f' This is my friend {v.title()}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:31:03.507024Z",
+     "start_time": "2021-07-24T17:31:03.494012Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " These are my best friends: ['Rogerio', 'Neymar', 'Beto', 'David', 'Alan'].\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_values = []\n",
+    "for v in my_friends.values():\n",
+    "    all_values.append(v.title())\n",
+    "\n",
+    "print(f' These are my best friends: {all_values[::-1]}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:35:53.570307Z",
+     "start_time": "2021-07-24T17:35:53.551102Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\tSite: WORK\n",
+      "\n",
+      "\tFriend: Alan\n",
+      "\n",
+      "\tSite: SCHOOL\n",
+      "\n",
+      "\tFriend: David\n",
+      "\n",
+      "\tSite: BAND\n",
+      "\n",
+      "\tFriend: Beto\n",
+      "\n",
+      "\tSite: SOCCER\n",
+      "\n",
+      "\tFriend: Neymar\n",
+      "\n",
+      "\tSite: TENNIS\n",
+      "\n",
+      "\tFriend: Rogerio\n",
+      "\n",
+      "\tSite: BASKETBALL\n",
+      "\n",
+      "\tFriend: David\n",
+      "\n",
+      "\tSite: CHURCH\n",
+      "\n",
+      "\tFriend: Alan\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_friends['Basketball'] = 'David'\n",
+    "my_friends['Church'] = 'Alan'\n",
+    "\n",
+    "for k, v in my_friends.items():\n",
+    "    print(f'\\n\\tSite: {k.upper()}')\n",
+    "    print(f'\\n\\tFriend: {v.title()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:36:29.854936Z",
+     "start_time": "2021-07-24T17:36:29.845775Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_friends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:37:10.955659Z",
+     "start_time": "2021-07-24T17:37:10.934539Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " These are my best friends: ['Alan', 'David', 'Beto', 'Rogerio', 'Neymar'].\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_values = []\n",
+    "for v in set(my_friends.values()):  # SET method doesn't repeat dic values.\n",
+    "    all_values.append(v.title())\n",
+    "\n",
+    "print(f' These are my best friends: {all_values[::-1]}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T17:43:51.679388Z",
+     "start_time": "2021-07-24T17:43:51.676312Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a SET, not a dictionary.\n",
+    "\n",
+    "friends = {'Astolfo', 'Reginaldo', 'Claudomiro'}\n",
+    "print(type(friends))"
+   ]
   }
  ],
  "metadata": {
